--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <main class="container">
-        <h1 class="text-center"><span class="text-danger">Calculate </span> number</h1>
+        <h1 class="text-center"><span class="text-danger">Calculate </span>number</h1>
 <!-- ----------------------------------------------- -->
         <div class="container text-center card text-bg-dark " style="width: 20rem;">
-            <input id="input-fields" type="text" class="m-2 p-2 rounded">
+            <input id="input-fields" type="text" class="mt-3 m-2 p-2 rounded">
             <div id="calculator" class="card-body row row-cols- row-cols-md-5 g-2 column-gap-2 m-2">
-                <div id="refresh" type="button" class="btn btn-secondary col me-1">AC</div>
+                <div id="refresh" type="button" class="btn btn-secondary col ms-1">AC</div>
                 <div id="pi_pi" type="button" class="btn btn-secondary col ms-1">pi</div>
                 <div id="percent" type="button" class="btn btn-secondary col ms-1"><i class="fa-light fa-percent"></i></div>
                 <div id="delete" type="button" class="btn btn-danger col ms-1">Del</div>
@@ -31,7 +31,7 @@
                 <div id="one" type="button" class="btn btn-secondary col ms-1">1</div>
                 <div id="two" type="button" class="btn btn-secondary col ms-1">2</div>
                 <div id="three" type="button" class="btn btn-secondary col ms-1">3</div>
-                <div id="plus" type="button" class="btn btn-secondary col ms-1"><i class="fa-light fa-plus"></i></div>
+                <div id="plus" type="button" class="btn btn-secondary col ms-1"><i class="fa-solid fa-plus"></i></div>
                 <div id="gero" type="button" class="btn btn-secondary col ms-1">0</div>
                 <div id="dot" type="button" class="btn btn-secondary col ms-1">.</div>
                 <div id="equal" onclick="multiple_pi()" type="button" class="btn btn-light    col ms-1"><i class="fa-regular fa-equals"></i></div>
